# bib

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  README.md
logo/: logo.xcf  sources.txt
src/: bib.h  cdefs.h  error.c  level1.c  level2.c  level3.c  types.h
src/blas/: blas.h  level1.c  level2.c  level3.c
src/funs/: abs.c  expm.c  minmax.c  trace.c
src/io/: print.c  write.c  write_ascii.c
src/lapack/: auxiliary.c  copy.c  lapack.h  lu.c  svd.c
src/misc/: allocators.c  diag.c  error.c  is_sym.c  rev.c  safeomp.h  version.c  xpose.c
tests/: Makefile  level2.c
tests/Rpkg/: DESCRIPTION  NAMESPACE
tests/Rpkg/R/: bib.r  lapack.r  level1.r  level2.r  level3.r
tests/Rpkg/man/: BIBtests.Rd
tests/Rpkg/src/: Makevars  global.c  invert.c  level1.c  level2.c  level3.c
tests/Rpkg/tests/: lapack.r  level1.r  level2.r  level3.r
tests/internal/: all_equal.h  gen.h  printer.h  timer.h
